add_library(hpcpp ex1.cpp)
target_include_directories(hpcpp PUBLIC ${CMAKE_SOURCE_DIR}/include)
target_include_directories(hpcpp PUBLIC ${CMAKE_SOURCE_DIR}/ext/eigen)
if(MSVC)
  target_compile_options(hpcpp PUBLIC "/openmp:experimental") # for simd support
endif()
find_package(OpenMP REQUIRED)
target_link_libraries(hpcpp PUBLIC OpenMP::OpenMP_CXX)
if(HPCPP_WITH_BLAS)
  find_package(BLAS REQUIRED)
  target_compile_definitions(hpcpp PUBLIC EIGEN_USE_BLAS)
  target_link_libraries(hpcpp PUBLIC BLAS::BLAS)
endif()
if(HPCPP_WITH_SIMD)
  if(MSVC)
    target_compile_options(hpcpp PUBLIC /arch:AVX2)
  else()
    target_compile_options(hpcpp PUBLIC "-march=native")
  endif()
endif()
